managed/apps/e2e/components/website/base/deploy-website-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-api
  namespace: e2e
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: e2e
      component: website
      container: api
  replicas: 1
  template:
    metadata:
      labels:
        app: e2e
        component: website
        container: api
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/e2e/website/main/api:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
          
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          envFrom:
            - configMapRef:
                name: app-level-config
            - configMapRef:
                name: env-level-config
            - configMapRef:
                name: component-level-config-website
            - configMapRef:
                name: container-level-config-website-api
          
      
      imagePullSecrets:
        - name: image-pull-secret
