managed/apps/e2e/components/website/base/deploy-website-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-static
  namespace: e2e
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: e2e
      component: website
      container: static
  replicas: 1
  template:
    metadata:
      labels:
        app: e2e
        component: website
        container: static
    spec:
      containers:
        - name: static
          image: gcr.io/tf-ops-cicd-97aadd/e2e/website/main/static:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 80
          
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          envFrom:
            - configMapRef:
                name: app-level-config
            - configMapRef:
                name: env-level-config
            - configMapRef:
                name: component-level-config-website
            - configMapRef:
                name: container-level-config-website-static
          
      
      imagePullSecrets:
        - name: image-pull-secret
