managed/apps/e2e/components/website/base/svc-website-static-nginx.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "website-static-nginx"
  namespace: e2e
spec:
  selector:
    app: e2e
    component: website
    container: static
  ports:
    - name: "nginx"
      protocol: "TCP"
      port: 80
